# worldtools

./: .gitignore  AGENTS.md  Cargo.toml  MATH_NOTES.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.cargo/: config.toml
.codex/: config.toml
.codex/agents/: worldtools-explorer.toml  worldtools-verifier.toml
.debug/cases/: terrain-smoke.toml  world-history.toml
apps/worldtools/: Cargo.toml
apps/worldtools/src/: diagnostics.rs  editor.rs  generation.rs  interaction.rs  layers.rs  live_remote.rs  main.rs  viewport_bridge.rs
apps/worldtools/src/debug_tools/: audit.rs  commands.rs  io.rs  mod.rs  snapshot.rs  telemetry.rs
apps/worldtools/src/editor/: probe.rs
apps/worldtools/src/interaction/: probe.rs
apps/worldtools/src/interaction/probe/: format.rs
crates/bombo_core/: Cargo.toml
crates/bombo_core/src/: hash.rs  kernels.rs  lib.rs
crates/worldtools_analysis/: Cargo.toml
crates/worldtools_analysis/src/: aggregate.rs  distribution.rs  lib.rs  lod.rs  seam.rs  simulation.rs  terrain.rs
crates/worldtools_render/: Cargo.toml
crates/worldtools_render/src/: blue_noise.rs  debug.rs  display.rs  height_field.rs  lib.rs  material.rs  projection.rs  streaming.rs  surface.rs  tile_data.rs  tile_material.rs  tile_surface.rs  view.rs  worldtools_terrain.wgsl  worldtools_tile.wgsl
crates/worldtools_simulation/: Cargo.toml
crates/worldtools_simulation/src/: grid.rs  layers.rs  lib.rs  random.rs  settings.rs  snapshot.rs
crates/worldtools_simulation/src/stages/: climate.rs  ecology.rs  geology.rs  glaciation.rs  hydrology.rs  math.rs  mod.rs  multires.rs  resources.rs  tectonics.rs
crates/worldtools_ui/: Cargo.toml
crates/worldtools_ui/src/: lib.rs  model.rs  style.rs  widgets.rs
crates/worldtools_ui/src/model/: analysis.rs  commands.rs  debug.rs  document.rs  editor.rs  generation.rs  jobs.rs  presentation.rs  probe.rs  tools.rs  viewport.rs
crates/worldtools_ui/src/shell/: bottom_drawer.rs  debug_window.rs  explorer.rs  inspector.rs  legend.rs  menu_bar.rs  mod.rs  status_bar.rs  tool_rail.rs  viewport.rs
crates/worldtools_world/: Cargo.toml
crates/worldtools_world/src/: cache.rs  edit.rs  geo.rs  lib.rs  seed.rs  terrain.rs  tile.rs
crates/worldtools_world/tests/: world_properties.rs
docs/: README.md
docs/handbook/: README.md  WorldTools-Handbook.md  architecture.md  build-single-file.ps1  check-offline.ps1  crate-map.md  data-layers.md  debugging.md  design-invariants.md  getting-started.md  glossary.md  reading-tours.md  rendering-ui.md  simulation.md  study-plan.md
public/wasm/: bombo_core.wasm
schema/: 00-index.md  01-product-frame.md  02-source-concepts.md  03-schema-driven-workflow.md  04-domain-object-model.md  05-simulation-pipeline.md  06-region-and-planet-grid-schema.md  07-tectonics-schema.md  08-terrain-erosion-hydrology-schema.md  09-climate-biomes-resources-schema.md  10-rendering-webgpu-schema.md  11-rust-wasm-modules-schema.md  12-typescript-app-architecture.md  13-ui-ux-schema.md  14-data-contracts-and-storage.md  15-quality-validation-and-done.md  16-implementation-roadmap.md  17-recursive-document-review.md
scripts/: copy-wasm.mjs
src/: main.ts  styles.css
src/lib/collections/: MinHeap.ts
src/lib/field/: BulkFieldMath.ts  field.ts  grid.ts
src/lib/history/: CommandHistory.ts
src/lib/math/: scalar.ts  vector.ts
src/lib/random/: deterministic.ts
src/render/: FieldRenderer.ts  MapCamera.ts  WebGpuFieldRenderer.ts  blueNoise.ts  createRenderer.ts  palette.ts
src/render/shaders/: sampling.ts  world.ts
src/runtime/: SimdFieldMath.ts
src/styles/: controls.css  tokens.css  workbench-responsive.css  workbench.css
src/workbench/: WorldWorkbench.ts
src/workbench/controllers/: GenerationMonitor.ts  GenerationSession.ts  ProjectSession.ts
src/workbench/editing/: ConstraintEditor.ts  ConstraintPainter.ts
src/workbench/events/: WorkbenchEvents.ts
src/workbench/interaction/: MapInteractionController.ts
src/workbench/panels/: LayerPanel.ts  ParameterPanel.ts  cellInspector.ts  panelDom.ts  pipelineInspector.ts  resourceInspector.ts
src/workbench/parameters/: definitions.ts
src/workbench/shell/: createShell.ts
src/workbench/viewport/: WorldViewport.ts
src/world/: ProjectRepository.ts  WorldGeneratorClient.ts  checksum.ts  constraints.ts  layerCatalog.ts  model.ts  projectArchive.ts  recipe.ts  workerProtocol.ts  world.worker.ts
src/world/engine/: context.ts  invalidation.ts  pipeline.ts  stage.ts
src/world/engine/climate/: circulation.ts  derived.ts  moisture.ts  stage.ts  temperature.ts
src/world/engine/cryosphere/: ice.ts  stage.ts  (+1 more)
src/world/layers/: environment.ts  geology.ts  palettes.ts  resources.ts  types.ts
tests/: bulk-field-math.test.ts  contracts.test.ts  editing.test.ts  field-map.test.ts  invalidation.test.ts  resources.test.ts  webgpu-renderer.test.ts  world-engine.test.ts  world-quality.test.ts
tools/worldtools_lab/: Cargo.toml
tools/worldtools_lab/src/: args.rs  continuity.rs  cube_edges.rs  main.rs  preview.rs  report.rs  sweep.rs  tile_set.rs  verify.rs  world.rs
xtask/: Cargo.toml
xtask/src/: artifact.rs  case.rs  check.rs  cli.rs  debug_script.rs  doctor.rs  main.rs  process.rs  reproduce.rs  workspace.rs
(+32 files in other folders)
