[workspace]
resolver = "3"
members = [
  "apps/worldtools",
  "crates/worldtools_analysis",
  "crates/worldtools_render",
  "crates/worldtools_ui",
  "crates/worldtools_world",
  "tools/worldtools_lab",
  "xtask",
]

[workspace.package]
version = "0.4.0"
edition = "2024"
rust-version = "1.95.0"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1.0.100"
bevy = { version = "=0.19.0", default-features = false, features = [
  "async_executor",
  "2d_bevy_render",
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_log",
  "bevy_render",
  "bevy_state",
  "bevy_window",
  "bevy_winit",
  "default_app",
  "default_platform",
  "keyboard",
  "mouse",
  "multi_threaded",
  "png",
  "std",
  "zstd_rust",
] }
bevy_egui = { version = "=0.41.0", default-features = false, features = ["accesskit", "default_fonts", "manage_clipboard", "render"] }
blake3 = "1.8.2"
bytemuck = { version = "1.25.1", features = ["derive"] }
clap = { version = "4.5.54", features = ["derive"] }
crossbeam-channel = "0.5.16"
egui_phosphor_icons = { version = "=0.4.0", default-features = false }
fastnoise-lite = { version = "1.1.1", default-features = false, features = ["f64", "std"] }
glam = { version = "0.33.2", features = ["serde"] }
image = { version = "0.25.9", default-features = false, features = ["png"] }
moka = { version = "0.12.11", features = ["sync"] }
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shade = { version = "0.0.4", default-features = false }
smallvec = { version = "1.15.1", features = ["serde"] }
thiserror = "2.0.17"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
toml = "0.9.8"
wait-timeout = "0.2.1"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
similar_names = "allow"

[profile.dev.package."*"]
opt-level = 2

[profile.dev]
debug = 1

[profile.test]
debug = 1

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"

[workspace.metadata.worldtools]
product-name = "WorldTools"
