[package]
name = "worldtools-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bevy.workspace = true
bevy_egui.workspace = true
egui_phosphor_icons.workspace = true
worldtools-world = { path = "../worldtools_world" }

[lints]
workspace = true
