[package]
name = "worldtools-world"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
blake3.workspace = true
fastnoise-lite.workspace = true
glam.workspace = true
moka.workspace = true
rstar.workspace = true
serde.workspace = true
smallvec.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest = "1.9.0"
serde_json.workspace = true

[lints]
workspace = true
