[package]
name = "worldtools-lab"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
image.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
worldtools-analysis = { path = "../../crates/worldtools_analysis" }
worldtools-world = { path = "../../crates/worldtools_world" }

[lints]
workspace = true
